k3s/Adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: default
  labels:
    app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      nodeName: worker-node-5
      containers:
      - name: adminer
        image: adminer:4.8.1
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "100Mi"
            cpu: "200m"
          requests:
            memory: "50Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
  namespace: default
spec:
  selector:
    app: adminer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30060
  type: NodePort
