k3s/Beekeeper.yaml

# Deployment for Beekeeper Studio
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beekeeper-studio
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beekeeper-studio
  template:
    metadata:
      labels:
        app: beekeeper-studio
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-node-5
      containers:
      - name: beekeeper-studio
        image: beekeeperstudio/community:latest
        ports:
        - containerPort: 3000  # Beekeeper Studio web interface port
        resources:
          limits:
            memory: "300Mi"  # Limit to 300MB for Beekeeper
            cpu: "500m"      # Limit to 0.5 CPU cores
          requests:
            memory: "200Mi"
            cpu: "200m"
        volumeMounts:
        - name: beekeeper-config
          mountPath: "/app/config/connections.json"
          subPath: connection.json
      volumes:
      - name: beekeeper-config
        configMap:
          name: beekeeper-config
          items:
          - key: connection.json
            path: connection.json

---

apiVersion: v1
kind: Service
metadata:
  name: beekeeper-service
  namespace: default
spec:
  selector:
    app: beekeeper-studio
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30060
  type: true
  type: NodePort
