k3s/Model.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: model
  template:
    metadata:
      labels:
        app: model
    spec:
      nodeName: worker-node-1
      containers:
      - name: model
        image: kamalbhaiii/cloud-computing-model:1-arm64v8
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: model-service
  namespace: default
spec:
  selector:
    app: model
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 30060
  type: NodePort
