k3s/Pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: default
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      nodeName: worker-node-5
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:8.12
        ports:
        - containerPort: 80
        volumeMounts:
        - name: pgadmin-config
          mountPath: "/pgadmin4/servers.json"
          subPath: "servers.json"
      volumes:
      - name: pgadmin-config
        configMap:
          name: pgadmin-config
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: default
spec:
  selector:
    app: pgadmin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30060
  type: NodePort
