k3s/Server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      nodeName: worker-node-3
      containers:
      - name: server
        image: kamalbhaiii/cloud-computing-server:20250706-771480e
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: default
spec:
  selector:
    app: server
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
