k3s/Model-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: model-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
        - model.local
      secretName: model-tls
  rules:
    - host: model.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: model-service
                port:
                  number: 5000
