k3s/Prometheus-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-ingress
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
      ports:
        - protocol: TCP
          port: 9100
        - protocol: TCP
          port: 3000
        - protocol: TCP
          port: 5000
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 9001
